--- a/index.html
+++ b/index.html
@@ -1,12 +1,158 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Мишка</title>
-  </head>
-  <body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Главная|Подарки ручной работы</title>
+</head>
+<body>
+  <!-- HEADER-START -->
+  <header class="page-header">
+    <div class="page-header__logo">
+      <img src="img/logo.png" alt="Mishka" width="86" height="35">
+    </div>
+    <nav class="main-nav">
+      <button class="main-nav__toggle" type="button">
+        <img src="img/hamburger.png" alt="Меню" width="20" height="14">
+      </button>
+      <ul class="main-nav__list">
+        <li class="main-nav__item"><a href="#">Каталог товаров</a></li>
+        <li class="main-nav__item"><a href="#">Вязание на заказ</a></li>
+        <li class="main-nav__item"><a href="#">Поиск по сайту</a></li>
+        <li class="main-nav__item"><a href="#">Корзина: пока пуста</a></li>
+      </ul>
+    </nav>
+  </header>
+  <!-- HEADER-END -->
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">Продвинутый HTML и CSS</a>».</p>
+  <!-- MAIN-START -->
+  <main>
+    <div class="banner-wrapper">
+      <h1 class="page-title">Милые штуки ручной работы для дома</h1>
+    </div>
+    <!-- catalog-links-start -->
+    <div class="catalog-links">
+      <a class="catalog-links__item  catalog-links__item--light" href="#">
+        <h2 class="catalog-links__title">Предметы интерьера</h2>
+      </a>
+      <a class="catalog-links__item  catalog-links__item--dark" href="#">
+        <h2 class="catalog-links__title">Детские игрушки</h2>
+      </a>
+    </div>
+    <!-- catalog-links-end -->
 
-  </body>
+    <!-- week-product-start -->
+    <section class="week-product">
+      <h2 class="week-product__title">Вязаные корзинки</h2>
+      <span class="week-product__category-title">Товар недели</span>
+      <p class="week-product__description">
+        Экологически чистая пряжа,
+        ручная работа. Доступны в шести
+        расцветках, и трех размерах.
+      </p>
+      <table class="week-product__options-table">
+        <tr class="week-product__options-table__row">
+          <td class="week-product__options-table__cell">Цвет:</td>
+          <td class="week-product__options-table__cell">«Тиффани»/серый</td>
+        </tr>
+        <tr class="week-product__options-table__row">
+          <td class="week-product__options-table__cell">Диаметр:</td>
+          <td class="week-product__options-table__cell">25 см</td>
+        </tr>
+        <tr class="week-product__options-table__row">
+          <td class="week-product__options-table__cell">Высота:</td>
+          <td class="week-product__options-table__cell">15 см</td>
+        </tr>
+      </table>
+      <img src="img/basket.jpg" alt="Корзины ручной работы" width="260" height="315">
+      <span class="week-product__item-price">Цена: 990 руб.</span>
+      <a class="week-product__order" href="#">Заказать</a>
+    </section>
+    <!-- week-product-emd -->
+
+    <!-- about-us-start -->
+    <section class="aboutus-block">
+      <h2 class="aboutus-block__title">Коротко о нас</h2>
+      <ul class="aboutus-block__list">
+        <li class="aboutus-block__item  aboutus-block__item--flower">Экологически чистые материалы</li>
+        <li class="aboutus-block__item  aboutus-block__item--money">Скандинавский стиль по российской цене</li>
+        <li class="aboutus-block__item  aboutus-block__item--heart">Увеличивает лайкина фотографиях</li>
+        <li class="aboutus-block__item  aboutus-block__item--rope">Связано вручную с любовью и умилением</li>
+        <li class="aboutus-block__item  aboutus-block__item--rocket">Поддержка отечественного производителя</li>
+        <li class="aboutus-block__item  aboutus-block__item--gift">Поставляется в подарочной упаковке</li>
+      </ul>
+    </section>
+    <!-- about-us-end -->
+
+    <!-- comment-block-start -->
+    <section class="comments">
+      <h2 class="comments__title">Отзывы</h2>
+      <div class="comment-item">
+        <p class="comment-item__text">
+            Я молодая мама, но всё равно
+            фотографии не набирали и близко
+            такого количества лайков, как у
+            популярных инстамамочек. В
+            отчаянии, я накупила аксессуаров
+            и игрушек в Мишке, и мои
+            фотографии сразу стали более
+            стильнее, а также набирают
+            больше лайков!</p>
+        <b class="comment-item__name">Анастасия Красильникова</b>
+        <span class="comment-item__link">@misssssiskras</span>
+      </div>
+      <button class="comments__switch-button  comments__switch-button--prev">&larr;</button>
+      <button class="comments__switch-button  comments__switch-button--next">&rarr;</button>
+    </section>
+    <!-- comment-block-end -->
+
+    <!-- contacts-block-start -->
+    <div class="contacts">
+      <span class="contacts__title">Контакты</span>
+      <ul class="contacts__list">
+        <li class="contacts__list-item">e-mail: <a href="mailto:nfo@mimimishkashop.ru">nfo@mimimishkashop.ru</a></li>
+        <li class="contacts__list-item">адрес: <span>г. Санкт-Петербург,ул. Большая Конюшенная, д. 19/8, офис 101</span></li>
+      </ul>
+      <div class="contacts__map"></div>
+      <a class="contacts__feedback-button" href="#"></a>
+    </div>
+    <!-- contacts-block-end -->
+  </main>
+  <!-- MAIN-END -->
+
+  <!-- FOOTER-START -->
+  <footer>
+    <ul class="social-list">
+      <li class="social-list__item  social-list__item--insta">
+        <a class="social-list__link" href="#">Instagram</a>
+      </li>
+      <li class="social-list__item  social-list__item--facebook">
+        <a class="social-list__link" href="#">Facebook</a>
+      </li>
+      <li class="social-list__item  social-list__item--twitter">
+        <a class="social-list__link" href="#">Twitter</a>
+      </li>
+    </ul>
+  <address class="developer-contact">
+    <span class="developer-contact__text">Разработано</span>
+    <a class="developer-contact__link" href="#">HTML Academy</a>
+  </address>
+  </footer>
+  <!-- FOOTER-END -->
+  <div class="modal-window">
+    <form class="size-form" action="#" method="post">
+      <span class="size-form__title">Добавить в корзину</span>
+      <span class="size-form__size">Выберите размер:</span>
+      <input class="size-form__input" type="radio" id="small" name="size" value="small" checked>
+      <label class="size-form__label" for="small">S</label>
+
+      <input class="size-form__input" type="radio" id="medium" name="size" value="medium">
+      <label class="size-form__label" for="medium">M</label>
+
+      <input class="size-form__input" type="radio" id="large" name="size" value="large">
+      <label class="size-form__label" for="large">L</label>
+      <button class="size-form__send" type="submit">Добавить</button>
+    </form>
+  </div>
+</body>
 </html>
