Исправил следующие ошибки

--- a/catalog.html
+++ b/catalog.html
@@ -98,7 +98,7 @@
   <div class="modal-window">
     <form class="size-form" action="#" method="post">
       <span class="size-form__title">Добавить в корзину</span>
-      <span class="size-form__size">Выберите размер:</span>
+      <span class="size-form__subtitle">Выберите размер:</span>
       <input class="size-form__input" type="radio" id="small" name="size" value="small" checked>
       <label class="size-form__label" for="small">S</label>
 
