--- a/form.html
+++ b/form.html
@@ -39,32 +39,32 @@
       <form class="order-form" action="#" method="post">
         <fieldset class="order-form__fieldset">
           <legend class="order-form__legend">Тип</legend>
-          <input class="order-form__type-radiobutton" type="radio" id="interior" name="type" value="interior" checked>
-          <label class="order-form__type-label" for="interior">Аксессуар для интерьера</label>
+          <input class="order-form__radiobutton  order-form__radiobutton--type" type="radio" id="interior" name="type" value="interior" checked>
+          <label class="order-form__label" for="interior">Аксессуар для интерьера</label>
 
-          <input class="order-form__type-radiobutton" type="radio" id="toys" name="type" value="toys">
-          <label class="order-form__type-label" for="toys">Детская игрушка</label>
+          <input class="order-form__radiobutton  order-form__radiobutton--type" type="radio" id="toys" name="type" value="toys">
+          <label class="order-form__label" for="toys">Детская игрушка</label>
         </fieldset>
 
         <fieldset class="order-form__fieldset">
           <legend class="order-form__legend">Цвет</legend>
-          <input class="order-form__color-checkbox" type="checkbox" id="white" name="color" value="white" checked>
-          <label class="order-form__color-label" for="white">Белый</label>
+          <input class="order-form__checkbox  order-form__checkbox--color" type="checkbox" id="white" name="color" value="white" checked>
+          <label class="order-form__label  order-form__label--color" for="white">Белый</label>
 
-          <input class="order-form__color-checkbox" type="checkbox" id="gray" name="color" value="gray" checked>
-          <label class="order-form__color-label" for="gray">Серый</label>
+          <input class="order-form__checkbox  order-form__checkbox--color" type="checkbox" id="gray" name="color" value="gray" checked>
+          <label class="order-form__label  order-form__label--color" for="gray">Серый</label>
 
-          <input class="order-form__color-checkbox" type="checkbox" id="tiffany" name="color" value="tiffany">
-          <label class="order-form__color-label" for="tiffany">"Тиффани"</label>
+          <input class="order-form__checkbox  order-form__checkbox--color" type="checkbox" id="tiffany" name="color" value="tiffany">
+          <label class="order-form__label  order-form__label--color" for="tiffany">"Тиффани"</label>
 
-          <input class="order-form__color-checkbox" type="checkbox" id="black" name="color" value="black">
-          <label class="order-form__color-label" for="black">Чёрный</label>
+          <input class="order-form__checkbox  order-form__checkbox--color" type="checkbox" id="black" name="color" value="black">
+          <label class="order-form__label  order-form__label--color" for="black">Чёрный</label>
 
-          <input class="order-form__color-checkbox" type="checkbox" id="pink" name="color" value="pink">
-          <label class="order-form__color-label" for="pink">Розовый</label>
+          <input class="order-form__checkbox  order-form__checkbox--color" type="checkbox" id="pink" name="color" value="pink">
+          <label class="order-form__label" for="pink">Розовый</label>
 
-          <input class="order-form__color-checkbox" type="checkbox" id="orange" name="color" value="orange">
-          <label class="order-form__color-label" for="orange">Оранжевый</label>
+          <input class="order-form__checkbox  order-form__checkbox--color" type="checkbox" id="orange" name="color" value="orange">
+          <label class="order-form__label  order-form__label--color" for="orange">Оранжевый</label>
         </fieldset>
 
         <fieldset class="order-form__fieldset">
