--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
     <!-- comment-block-start -->
     <section class="comments">
       <h2 class="comments__title">Отзывы</h2>
-      <div class="comment-item">
-        <p class="comment-item__text">
+      <div class="comments-item">
+        <p class="comments-item__text">
             Я молодая мама, но всё равно
             фотографии не набирали и близко
             такого количества лайков, как у
@@ -98,8 +98,8 @@
             фотографии сразу стали более
             стильнее, а также набирают
             больше лайков!</p>
-        <b class="comment-item__name">Анастасия Красильникова</b>
-        <span class="comment-item__link">@misssssiskras</span>
+        <b class="comments-item__name">Анастасия Красильникова</b>
+        <span class="comments-item__link">@misssssiskras</span>
       </div>
       <button class="comments__switch-button  comments__switch-button--prev">&larr;</button>
       <button class="comments__switch-button  comments__switch-button--next">&rarr;</button>
@@ -110,7 +110,7 @@
     <div class="contacts">
       <span class="contacts__title">Контакты</span>
       <ul class="contacts__list">
-        <li class="contacts__list-item">e-mail: <a href="mailto:nfo@mimimishkashop.ru">nfo@mimimishkashop.ru</a></li>
+        <li class="contacts__list-item">e-mail: <a href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a></li>
         <li class="contacts__list-item">адрес: <span>г. Санкт-Петербург,ул. Большая Конюшенная, д. 19/8, офис 101</span></li>
       </ul>
       <div class="contacts__map"></div>
@@ -142,7 +142,7 @@
   <div class="modal-window">
     <form class="size-form" action="#" method="post">
       <span class="size-form__title">Добавить в корзину</span>
-      <span class="size-form__size">Выберите размер:</span>
+      <span class="size-form__subtitle">Выберите размер:</span>
       <input class="size-form__input" type="radio" id="small" name="size" value="small" checked>
       <label class="size-form__label" for="small">S</label>
 
