--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
     <!-- comment-block-start -->
     <section class="comments">
       <h2 class="comments__title">Отзывы</h2>
-      <div class="comments-item">
-        <p class="comments-item__text">
+      <div class="comment">
+        <p class="comment__text">
             Я молодая мама, но всё равно
             фотографии не набирали и близко
             такого количества лайков, как у
@@ -98,8 +98,8 @@
             фотографии сразу стали более
             стильнее, а также набирают
             больше лайков!</p>
-        <b class="comments-item__name">Анастасия Красильникова</b>
-        <span class="comments-item__link">@misssssiskras</span>
+        <b class="comment__name">Анастасия Красильникова</b>
+        <span class="comment__link">@misssssiskras</span>
       </div>
       <button class="comments__switch-button  comments__switch-button--prev">&larr;</button>
       <button class="comments__switch-button  comments__switch-button--next">&rarr;</button>
