--- a/catalog.html
+++ b/catalog.html
@@ -3,23 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css">
   <title>Каталог|Подарки ручной работы</title>
 </head>
 <body>
   <!-- HEADER-START -->
   <header class="page-header">
     <div class="page-header__logo">
-      <img src="img/logo.png" alt="Mishka" width="86" height="35">
+      <a href="index.html">
+        <img src="img/logo.png" alt="Mishka" width="86" height="35">
+      </a>
     </div>
     <nav class="main-nav">
       <button class="main-nav__toggle" type="button">
         <img src="img/hamburger.png" alt="Меню" width="20" height="14">
       </button>
       <ul class="main-nav__list">
-        <li class="main-nav__item"><a href="#">Каталог товаров</a></li>
-        <li class="main-nav__item"><a href="#">Вязание на заказ</a></li>
-        <li class="main-nav__item"><a href="#">Поиск по сайту</a></li>
-        <li class="main-nav__item"><a href="#">Корзина: пока пуста</a></li>
+        <li class="main-nav__item"><a class="main-nav__link">Каталог товаров</a></li>
+        <li class="main-nav__item"><a class="main-nav__link" href="#">Вязание на заказ</a></li>
+        <li class="main-nav__item"><a class="main-nav__link" href="#">Поиск по сайту</a></li>
+        <li class="main-nav__item"><a class="main-nav__link" href="#">Корзина: пока пуста</a></li>
       </ul>
     </nav>
   </header>
@@ -30,54 +33,56 @@
     <h1 class="page-title  page-title--catalog">Каталог товаров</h1>
     <div class="catalog-wrapper">
       <article class="product">
-        <img src="img/photo-1-mobile.jpg" width="260" height="195" alt="Зайчик-попрыгайчик">
+        <img class="product__img" src="img/photo-1-mobile.jpg" width="260" height="195" alt="Зайчик-попрыгайчик">
         <h2 class="product__title">Зайчик-попрыгайчик</h2>
         <span class="product__description">Рост 30 см, вес 200 г</span>
         <div class="product__price-cart-wrapper">
           <span class="product__price">1 200 руб.</span>
           <a class="product__cart" href="#">
-            <img src="img/cart.png" alt="Добавить в корзину">
+            <img class="product__cart-icon" src="img/cart.png" alt="Добавить в корзину">
           </a>
         </div>
       </article>
       <article class="product">
-        <img src="img/photo-2-mobile.jpg" width="260" height="195" alt="Корзинка для белья">
+        <img class="product__img" src="img/photo-2-mobile.jpg" width="260" height="195" alt="Корзинка для белья">
         <h2 class="product__title">Корзинка для белья</h2>
         <span class="product__description">Диаметр 15 см, высота 10 см</span>
         <div class="product__price-cart-wrapper">
           <span class="product__price">690 руб.</span>
           <a class="product__cart" href="#">
-            <img src="img/cart.png" alt="Добавить в корзину">
+            <img class="product__cart-icon" src="img/cart.png" alt="Добавить в корзину">
           </a>
         </div>
       </article>
       <article class="product">
-        <img src="img/photo-3-mobile.jpg" width="260" height="195" alt="Большая корзинка для игрушек">
+        <img class="product__img" src="img/photo-3-mobile.jpg" width="260" height="195" alt="Большая корзинка для игрушек">
         <h2 class="product__title">Большая корзинка для игрушек</h2>
         <span class="product__description">Диаметр 30 см, высота 30 см</span>
         <div class="product__price-cart-wrapper">
           <span class="product__price">1 500 руб.</span>
           <a class="product__cart" href="#">
-            <img src="img/cart.png" alt="Добавить в корзину">
+            <img class="product__cart-icon" src="img/cart.png" alt="Добавить в корзину">
           </a>
         </div>
       </article>
     </div>
     <div class="video-block">
-      <h1 class="video-block__title">Процесс производства</h1>
-      <img class="video-block__content" src="img/video-mobile.jpg" width="260" height="150" alt="Процесс производства">
-      <p class="video-block__description">
-        По просьбам наших любимых фолловеров
-        мы сняли для вас подробное видео о том,
-        как появляются наши товары.
-      </p>
-      <a class="video-block__order" href="#">Сделать заказ</a>
+      <div class="video-block__wrapper">
+        <h1 class="video-block__title">Процесс производства</h1>
+        <img class="video-block__content" src="img/video-mobile.jpg" width="260" height="150" alt="Процесс производства">
+        <p class="video-block__description">
+          По просьбам наших любимых фолловеров
+          мы сняли для вас подробное видео о том,
+          как появляются наши товары.
+        </p>
+        <a class="video-block__order" href="#">Сделать заказ</a>
+      </div>
     </div>
   </main>
   <!-- MAIN-END -->
 
   <!-- FOOTER-START -->
-  <footer>
+  <footer class="page-footer">
     <ul class="social-list">
       <li class="social-list__item  social-list__item--insta">
         <a class="social-list__link" href="#">Instagram</a>
@@ -89,10 +94,10 @@
         <a class="social-list__link" href="#">Twitter</a>
       </li>
     </ul>
-  <address class="developer-contact">
-    <span class="developer-contact__text">Разработано</span>
-    <a class="developer-contact__link" href="#">HTML Academy</a>
-  </address>
+    <address class="developer-contact">
+      <span class="developer-contact__text">Разработано</span>
+      <a class="developer-contact__link" href="#">HTML Academy</a>
+    </address>
   </footer>
   <!-- FOOTER-END -->
   <div class="modal-window">
