--- a/index.html
+++ b/index.html
@@ -3,23 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css">
   <title>Главная|Подарки ручной работы</title>
 </head>
 <body>
   <!-- HEADER-START -->
   <header class="page-header">
     <div class="page-header__logo">
-      <img src="img/logo.png" alt="Mishka" width="86" height="35">
+      <img class="page-header__logo-img" src="img/logo.png" alt="Mishka" width="86" height="35">
     </div>
     <nav class="main-nav">
       <button class="main-nav__toggle" type="button">
-        <img src="img/hamburger.png" alt="Меню" width="20" height="14">
+        <img class="main-nav__icon" src="img/hamburger.png" alt="Меню" width="20" height="14">
       </button>
       <ul class="main-nav__list">
-        <li class="main-nav__item"><a href="#">Каталог товаров</a></li>
-        <li class="main-nav__item"><a href="#">Вязание на заказ</a></li>
-        <li class="main-nav__item"><a href="#">Поиск по сайту</a></li>
-        <li class="main-nav__item"><a href="#">Корзина: пока пуста</a></li>
+        <li class="main-nav__item"><a class="main-nav__link" href="catalog.html">Каталог товаров</a></li>
+        <li class="main-nav__item"><a class="main-nav__link" href="#">Вязание на заказ</a></li>
+        <li class="main-nav__item"><a class="main-nav__link" href="#">Поиск по сайту</a></li>
+        <li class="main-nav__item"><a class="main-nav__link" href="#">Корзина: пока пуста</a></li>
       </ul>
     </nav>
   </header>
@@ -28,7 +29,7 @@
   <!-- MAIN-START -->
   <main>
     <div class="banner-wrapper">
-      <h1 class="page-title">Милые штуки ручной работы для дома</h1>
+      <h1 class="page-title">Милые штуки ручной<br> работы для дома</h1>
     </div>
     <!-- catalog-links-start -->
     <div class="catalog-links">
@@ -64,7 +65,7 @@
           <td class="week-product__options-table__cell">15 см</td>
         </tr>
       </table>
-      <img src="img/basket.jpg" alt="Корзины ручной работы" width="260" height="315">
+      <img class="week-product__img" src="img/basket.jpg" alt="Корзины ручной работы" width="260" height="315">
       <span class="week-product__item-price">Цена: 990 руб.</span>
       <a class="week-product__order" href="#">Заказать</a>
     </section>
@@ -76,7 +77,7 @@
       <ul class="aboutus-block__list">
         <li class="aboutus-block__item  aboutus-block__item--flower">Экологически чистые материалы</li>
         <li class="aboutus-block__item  aboutus-block__item--money">Скандинавский стиль по российской цене</li>
-        <li class="aboutus-block__item  aboutus-block__item--heart">Увеличивает лайкина фотографиях</li>
+        <li class="aboutus-block__item  aboutus-block__item--heart">Увеличивает лайки на фотографиях</li>
         <li class="aboutus-block__item  aboutus-block__item--rope">Связано вручную с любовью и умилением</li>
         <li class="aboutus-block__item  aboutus-block__item--rocket">Поддержка отечественного производителя</li>
         <li class="aboutus-block__item  aboutus-block__item--gift">Поставляется в подарочной упаковке</li>
@@ -101,8 +102,17 @@
         <b class="comment__name">Анастасия Красильникова</b>
         <span class="comment__link">@misssssiskras</span>
       </div>
-      <button class="comments__switch-button  comments__switch-button--prev">&larr;</button>
-      <button class="comments__switch-button  comments__switch-button--next">&rarr;</button>
+      <button class="comments__switch-button  comments__switch-button--prev">
+        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="50px" height="26.003px" viewBox="0 0 50 26.003" enable-background="new 0 0 50 26.003" xml:space="preserve">
+          <polygon points="50,11.002 7.659,11.002 15.833,2.828 13.005,0 0,12.998 0.003,13.001 0,13.005 13.005,26.003 15.833,23.175 7.661,15.002 50,15.002 "/>
+        </svg>
+      </button>
+      <button class="comments__switch-button  comments__switch-button--next">
+        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="50px" height="26.003px" viewBox="0 0 50 26.003" enable-background="new 0 0 50 26.003" xml:space="preserve">
+          <polygon points="0,11.002 42.341,11.002 34.166,2.828 36.995,0 50,12.998 49.996,13.001 50,13.005 36.995,26.003 34.166,23.175 42.339,15.002 0,15.002 "/>
+        </svg>
+      </button>
+      <a class="comments__feedback-btn" href="#">Написать</a>
     </section>
     <!-- comment-block-end -->
 
@@ -110,18 +120,19 @@
     <div class="contacts">
       <span class="contacts__title">Контакты</span>
       <ul class="contacts__list">
-        <li class="contacts__list-item">e-mail: <a href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a></li>
-        <li class="contacts__list-item">адрес: <span>г. Санкт-Петербург,ул. Большая Конюшенная, д. 19/8, офис 101</span></li>
+        <li class="contacts__list-item"><span class="contacts__list-item-name">e-mail:</span> <a class="contacts__list-link" href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a></li>
+        <li class="contacts__list-item"><span class="contacts__list-item-name">адрес:</span> <span class="contacts__list-item-text">г. Санкт-Петербург,ул. Большая Конюшенная, д. 19/8, офис 101</span></li>
       </ul>
       <div class="contacts__map"></div>
       <a class="contacts__feedback-button" href="#"></a>
+      <a class="contacts__feedback-btn" href="#">Напишите нам</a>
     </div>
     <!-- contacts-block-end -->
   </main>
   <!-- MAIN-END -->
 
   <!-- FOOTER-START -->
-  <footer>
+  <footer class="page-footer">
     <ul class="social-list">
       <li class="social-list__item  social-list__item--insta">
         <a class="social-list__link" href="#">Instagram</a>
@@ -133,10 +144,10 @@
         <a class="social-list__link" href="#">Twitter</a>
       </li>
     </ul>
-  <address class="developer-contact">
-    <span class="developer-contact__text">Разработано</span>
-    <a class="developer-contact__link" href="#">HTML Academy</a>
-  </address>
+    <address class="developer-contact">
+      <span class="developer-contact__text">Разработано</span>
+      <a class="developer-contact__link" href="#">HTML Academy</a>
+    </address>
   </footer>
   <!-- FOOTER-END -->
   <div class="modal-window">
