--- a/index.html
+++ b/index.html
@@ -12,24 +12,31 @@
     <div class="page-header__logo">
       <img class="page-header__logo-img" src="img/logo.png" alt="Mishka" width="86" height="35">
     </div>
-    <nav class="main-nav">
-      <button class="main-nav__toggle" type="button">
-        <img class="main-nav__icon" src="img/hamburger.png" alt="Меню" width="20" height="14">
-      </button>
-      <ul class="main-nav__list">
-        <li class="main-nav__item"><a class="main-nav__link" href="catalog.html">Каталог товаров</a></li>
-        <li class="main-nav__item"><a class="main-nav__link" href="#">Вязание на заказ</a></li>
-        <li class="main-nav__item"><a class="main-nav__link" href="#">Поиск по сайту</a></li>
-        <li class="main-nav__item"><a class="main-nav__link" href="#">Корзина: пока пуста</a></li>
-      </ul>
-    </nav>
+    <button class="main-nav__toggle" type="button">
+      <img class="main-nav__icon" src="img/hamburger.png" alt="Меню" width="20" height="14">
+    </button>
+    <ul class="main-nav  main-nav--grey">
+      <li class="main-nav__item  main-nav__item--border"><a class="main-nav__link" href="catalog.html">Каталог товаров</a></li>
+      <li class="main-nav__item"><a class="main-nav__link" href="#">Вязание на заказ</a></li>
+    </ul>
+    <ul class="main-nav  main-nav--desktop">
+      <li class="main-nav__item"><a class="main-nav__link" href="#">Новые поступления</a></li>
+      <li class="main-nav__item"><a class="main-nav__link" href="#">Распродажа</a></li>
+    </ul>
+    <ul class="main-nav  main-nav--user">
+      <li class="main-nav__item  main-nav__item--search"><a class="main-nav__link  main-nav__link--search" href="#">Поиск по сайту</a></li>
+      <li class="main-nav__item"><a class="main-nav__link" href="#">Корзина: пока пуста</a></li>
+    </ul>
+    <span class="page-header__text">Бесплатная доставка по России</span>
   </header>
   <!-- HEADER-END -->
 
   <!-- MAIN-START -->
   <main>
     <div class="banner-wrapper">
-      <h1 class="page-title">Милые штуки ручной<br> работы для дома</h1>
+      <div class="banner-wrapper__background">
+        <h1 class="page-title">Милые штуки ручной<br> работы для дома</h1>
+      </div>
     </div>
     <!-- catalog-links-start -->
     <div class="catalog-links">
@@ -90,15 +97,16 @@
       <h2 class="comments__title">Отзывы</h2>
       <div class="comment">
         <p class="comment__text">
-            Я молодая мама, но всё равно
-            фотографии не набирали и близко
-            такого количества лайков, как у
-            популярных инстамамочек. В
-            отчаянии, я накупила аксессуаров
-            и игрушек в Мишке, и мои
-            фотографии сразу стали более
-            стильнее, а также набирают
-            больше лайков!</p>
+          Я молодая мама, но всё равно
+          фотографии не набирали и близко
+          такого количества лайков, как у
+          популярных инстамамочек. В
+          отчаянии, я накупила аксессуаров
+          и игрушек в Мишке, и мои
+          фотографии сразу стали более
+          стильнее, а также набирают
+          больше лайков!
+        </p>
         <b class="comment__name">Анастасия Красильникова</b>
         <span class="comment__link">@misssssiskras</span>
       </div>
@@ -120,11 +128,16 @@
     <div class="contacts">
       <span class="contacts__title">Контакты</span>
       <ul class="contacts__list">
-        <li class="contacts__list-item"><span class="contacts__list-item-name">e-mail:</span> <a class="contacts__list-link" href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a></li>
-        <li class="contacts__list-item"><span class="contacts__list-item-name">адрес:</span> <span class="contacts__list-item-text">г. Санкт-Петербург,ул. Большая Конюшенная, д. 19/8, офис 101</span></li>
+        <li class="contacts__list-item">
+          <span class="contacts__list-item-name">e-mail:</span>
+          <a class="contacts__list-link" href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a>
+        </li>
+        <li class="contacts__list-item  contacts__list-item--address">
+          <span class="contacts__list-item-name  contacts__list-item-name--address">адрес:</span>
+          <span class="contacts__list-item-text">г. Санкт-Петербург,<br>ул. Большая Конюшенная,<br> д. 19/8, офис 101</span>
+        </li>
       </ul>
       <div class="contacts__map"></div>
-      <a class="contacts__feedback-button" href="#"></a>
       <a class="contacts__feedback-btn" href="#">Напишите нам</a>
     </div>
     <!-- contacts-block-end -->
@@ -133,6 +146,9 @@
 
   <!-- FOOTER-START -->
   <footer class="page-footer">
+    <div class="footer-logo">
+      <img class="footer-logo__image" src="img/logo.png" alt="Mishka" width="86" height="35">
+    </div>
     <ul class="social-list">
       <li class="social-list__item  social-list__item--insta">
         <a class="social-list__link" href="#">Instagram</a>
