--- a/catalog.html
+++ b/catalog.html
@@ -19,7 +19,7 @@
     </button>
     <ul class="main-nav  main-nav--grey">
       <li class="main-nav__item  main-nav__item--border"><a class="main-nav__link" href="catalog.html">Каталог товаров</a></li>
-      <li class="main-nav__item"><a class="main-nav__link" href="#">Вязание на заказ</a></li>
+      <li class="main-nav__item"><a class="main-nav__link" href="form.html">Вязание на заказ</a></li>
     </ul>
     <ul class="main-nav  main-nav--desktop">
       <li class="main-nav__item"><a class="main-nav__link" href="#">Новые поступления</a></li>
