--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </button>
     <ul class="main-nav  main-nav--grey">
       <li class="main-nav__item  main-nav__item--border"><a class="main-nav__link" href="catalog.html">Каталог товаров</a></li>
-      <li class="main-nav__item"><a class="main-nav__link" href="#">Вязание на заказ</a></li>
+      <li class="main-nav__item"><a class="main-nav__link" href="form.html">Вязание на заказ</a></li>
     </ul>
     <ul class="main-nav  main-nav--desktop">
       <li class="main-nav__item"><a class="main-nav__link" href="#">Новые поступления</a></li>
@@ -35,7 +35,7 @@
   <main>
     <div class="banner-wrapper">
       <div class="banner-wrapper__background">
-        <h1 class="page-title">Милые штуки ручной<br> работы для дома</h1>
+        <h1 class="page-title">Милые штуки ручной работы&nbsp;для дома</h1>
       </div>
     </div>
     <!-- catalog-links-start -->
@@ -51,8 +51,10 @@
 
     <!-- week-product-start -->
     <section class="week-product">
-      <h2 class="week-product__title">Вязаные корзинки</h2>
-      <span class="week-product__category-title">Товар недели</span>
+      <div class="week-product__title-wrapper">
+        <h2 class="week-product__title">Вязаные корзинки</h2>
+        <span class="week-product__category-title">Товар недели</span>
+      </div>
       <p class="week-product__description">
         Экологически чистая пряжа,
         ручная работа. Доступны в шести
